@@ -1,6 +1,10 @@
 For a more comprehensive changelog of the latest experimental code, see:
         https://github.com/fink/passwd/commits/
 
+20130929
+	* Bugfix: try to make sure that we're not grep'ing in the comments or matching
+	  other than full names in passwd-fink and group-fink.
+
 20130111:
 	* Be kinder to folks who had been manually setting configurations via 
 	  %p/etc/passwd-fink and %p/etc/group-fink.
